--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
+serde = {version = "1.0.217", features = ["derive"]}
+serde_json = "1.0.108"
+image = "0.25.5"
